CustomObjects/objects/invoiceit_s__Credit_Note__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Amount__c</fullName>
        <label>Subtotal</label>
        <summarizedField>invoiceit_s__Credit_Line__c.invoiceit_s__Line_Amount__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Credit_Line__c.invoiceit_s__Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Credit_Note_Date__c</fullName>
        <label>Credit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Credit_Note_Status__c</fullName>
        <label>Credit Note Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Posted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Value__c</fullName>
        <label>Obsolete Discount Value</label>
        <summarizedField>invoiceit_s__Credit_Line__c.invoiceit_s__Discount_Value__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Credit_Line__c.invoiceit_s__Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exchange_Rate_Applied__c</fullName>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Net_Total__c</fullName>
        <formula>invoiceit_s__Amount__c - invoiceit_s__Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Number_Of_Credit_Lines__c</fullName>
        <label>Number Of Credit Lines</label>
        <summaryForeignKey>invoiceit_s__Credit_Line__c.invoiceit_s__Credit_Note__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Related_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes (Shipping Contact)</relationshipLabel>
        <relationshipName>Credit_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax__c</fullName>
        <label>Tax</label>
        <summarizedField>invoiceit_s__Credit_Line__c.invoiceit_s__Tax__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Credit_Line__c.invoiceit_s__Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Credit_Note_Value__c</fullName>
        <formula>invoiceit_s__Amount__c - invoiceit_s__Discount_Value__c + invoiceit_s__VAT__c + invoiceit_s__Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Credit Note Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__VAT__c</fullName>
        <label>VAT</label>
        <summarizedField>invoiceit_s__Credit_Line__c.invoiceit_s__VAT__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Credit_Line__c.invoiceit_s__Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Credit Note</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Credit Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Cannot_change_status_from_cancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE 
( invoiceit_s__Credit_Note_Status__c ), 
&quot;Cancelled&quot;) &amp;&amp; ISCHANGED( invoiceit_s__Credit_Note_Status__c )</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Credit_Note_Status__c</errorDisplayField>
        <errorMessage>You cannot change the status of a cancelled credit note</errorMessage>
    </validationRules>
</CustomObject>